--- a/executiveEmailTemplate.html
+++ b/executiveEmailTemplate.html
@@ -171,6 +171,11 @@
             color: #ffffff;
         }
 
+        li {
+            padding-left: 2em;
+            text-indent: -2em;
+        }
+
         @media only screen and (max-width: 550px), screen and (max-device-width: 550px) {
             body[yahoo] .hide {
                 display: none !important;
@@ -223,7 +228,7 @@
                         <table width="70" align="center" border="0" cellpadding="0" cellspacing="0">
                             <tr>
                                 <td height="70" align="center" style="padding: 0 0 0 0;">
-                                    <img class="fix" src="https://dl.dropboxusercontent.com/u/190628614/mitm/img_wta_logo_black.png" width="187" height="40" border="0" alt="Logo" style="height: auto;">
+                                    <img class="fix" src="http://i.imgur.com/nFbqXOr.png" width="187" height="40" border="0" alt="Logo" style="height: auto;">
                                 </td>
                             </tr>
                         </table>
@@ -231,12 +236,12 @@
                 </tr>
                 <tr>
                     <td class="h1" bgcolor="#f4f4f4" align="center" style="font-family: FreightDispPro-Regular;font-size: 35px;font-weight: bold;font-style: normal;font-stretch: normal;line-height: 1.23;letter-spacing: normal;text-align: center;color: #252525;">
-                        Fox News - Election HQ 2016
+                        Client Name - Project Name
                     </td>
                 </tr>
                 <tr>
                     <td class="h2" bgcolor="#f4f4f4" align="center" style="font-family: Arial;font-size: 16px;font-weight: normal;font-style: normal;font-stretch: normal;line-height: normal;letter-spacing: normal;text-align: center;color: #252525;">
-                        Period of January 16 - 22, 2016
+                        Period of MONTH DD - DD, YYYY
                     </td>
                 </tr>
                 <tr>
@@ -260,11 +265,11 @@
                         <table width="100%" border="0" cellspacing="0" cellpadding="0">
                             <tr>
                                 <td class="takeaways" style="font-family: Arial;font-size: 16px;font-weight: normal;font-style: normal;font-stretch: normal;line-height: 1.44;letter-spacing: normal;color: #ffffff;">
-                                    <li>iOS and Android 2.0 now live with first quiz available</li>
+                                    <li style="padding-left: 2em;text-indent: -2em;">This is the first takeaway</li>
                                     <br>
-                                    <li>iOS/Android 2.0.1 in QA</li>
+                                    <li style="padding-left: 2em;text-indent: -2em;">This is another takeaway</li>
                                     <br>
-                                    <li>iOS/Android 2.1 in dev - iOS pushed to 2/8 to accommdate hotfix</li>
+                                    <li style="padding-left: 2em;text-indent: -2em;">Here's a third takeaway from the week</li>
                                     <br>
                                 </td>
                             </tr>
@@ -280,12 +285,7 @@
                             </tr>
                             <tr>
                                 <td class="escalations-text" style="font-family: Arial;font-size: 18px;font-weight: 600;font-style: normal;font-stretch: normal;line-height: 1.25;letter-spacing: normal;padding: 10px;color: #ffffff;">
-                                    iOS/Android 2.0.1 in QA
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="escalations-text" style="font-family: Arial;font-size: 18px;font-weight: 600;font-style: normal;font-stretch: normal;line-height: 1.25;letter-spacing: normal;padding: 10px;color: #ffffff;">
-                                    ios/Android 2.1 in dev - iOS pushed to 2/8 to accommodate hotfix
+                                    We are blocked on this thing and it will impact the timeline so please do X Y Z to unblock the team
                                 </td>
                             </tr>
                         </table>
@@ -309,7 +309,7 @@
                                         </tr>
                                         <tr>
                                             <td align="center" style="padding: 0 0 0 0;">
-                                                <img class="fix" src="https://dl.dropboxusercontent.com/u/190628614/mitm/img_wta_logo_black.png" border="0" alt="Logo" style="height: auto;">
+                                                <img class="fix" src="http://i.imgur.com/flWacvS.png" border="0" alt="Logo" width="500px" height="300px" style="height: auto;">
                                             </td>
                                         </tr>
                                     </table>
@@ -349,9 +349,9 @@
                                         <tr>
                                             <td class="project-burndown-text" style="font-family: Arial;font-size: 16px;font-weight: normal;font-style: normal;font-stretch: normal;line-height: 1.25;letter-spacing: normal;color: #4a4a4a;">
                                                 <br>
-                                                <li>Blah blah blah</li>
+                                                <li style="padding-left: 2em;text-indent: -2em;">No additions this past week</li>
                                                 <br>
-                                                <li>Blah blah blah</li>
+                                                <li style="padding-left: 2em;text-indent: -2em;"><a href="google.com">Link</a> to Icebox</li>
                                             </td>
                                         </tr>
                                     </table>
@@ -391,9 +391,9 @@
                                         <tr>
                                             <td class="project-burndown-text" style="font-family: Arial;font-size: 16px;font-weight: normal;font-style: normal;font-stretch: normal;line-height: 1.25;letter-spacing: normal;color: #4a4a4a;">
                                                 <br>
-                                                <li>Blah blah blah</li>
+                                                <li style="padding-left: 2em;text-indent: -2em;">No new security risks identified this past week</li>
                                                 <br>
-                                                <li>Blah blah blah</li>
+                                                <li style="padding-left: 2em;text-indent: -2em;"><a href="google.com">Link</a> to known Security Risks</li>
                                             </td>
                                         </tr>
                                     </table>
@@ -433,9 +433,7 @@
                                         <tr>
                                             <td class="project-burndown-text" style="font-family: Arial;font-size: 16px;font-weight: normal;font-style: normal;font-stretch: normal;line-height: 1.25;letter-spacing: normal;color: #4a4a4a;">
                                                 <br>
-                                                <li>iOS 2.0.1 hotfix (ASAP)</li>
-                                                <br>
-                                                <li>Android 2.0.1 hotfix (ASAP</li>
+                                                <li style="padding-left: 2em;text-indent: -2em;"><a href="google.com">Link</a> to Project Plan</li>
                                             </td>
                                         </tr>
                                     </table>
@@ -454,7 +452,7 @@
                         <table width="35" align="left" border="0" cellpadding="0" cellspacing="0" style=" margin: 0 15px;">
                             <tr>
                                 <td>
-                                    <img class="fix" src="http://imgur.com/mh2tTWK.png" width="100%" border="0" alt="" style="height: auto;">
+                                    <img class="fix" src="http://i.imgur.com/vy9Gha0.png" width="100%" border="0" alt="" style="height: auto;">
                                 </td>
                             </tr>
                         </table>
@@ -475,7 +473,9 @@
                                         <tr>
                                             <td class="project-burndown-text" style="font-family: Arial;font-size: 16px;font-weight: normal;font-style: normal;font-stretch: normal;line-height: 1.25;letter-spacing: normal;color: #4a4a4a;">
                                                 <br>
-                                                <li>Blah blah blah</li>
+                                                <li style="padding-left: 2em;text-indent: -2em;">Feb 8: Freeze on feature development</li>
+                                                <br>
+                                                <li style="padding-left: 2em;text-indent: -2em;">Mar 6: V1 release</li>
                                             </td>
                                         </tr>
                                     </table>
@@ -495,8 +495,8 @@
                             <tr>
                                 <td align="center" class="footercopy" style="font-family: Arial;font-size: 16px;font-weight: 500;font-style: normal;font-stretch: normal;line-height: 1.12;letter-spacing: normal;text-align: center;color: #c1ccce;">
                                     <p>
-                                        Copyright &reg; 2017 WillowTree Inc.<br><br>
-                                        107 5th Street Southeast, Charlottesville, VA 22911
+                                    Copyright &reg; 2017 WillowTree Inc.<br><br>
+                                    107 5th Street Southeast, Charlottesville, VA 22911
                                     </p>
                                     <p class="inbox-inbox-m_-6958536859301802227gmail-m_4112027851297612724smaller gmail_msg" style="font-size: 11px; line-height: 24px; padding: 0px;">
                                         <a href="http://willowtreeapps.com/apps/" class="inbox-inbox-m_-6958536859301802227gmail-m_4112027851297612724link gmail_msg" title="Our Work" style="color: #c1ccce;text-decoration: underline;">Our Work</a>
