had to give up nice text wrapping
gmail strips out text-indent. Had to choose between nice text wrapping on bullets, or properly aligned bullets in gmail. Chose the latter.

--- a/executiveEmailTemplate.html
+++ b/executiveEmailTemplate.html
@@ -171,9 +171,8 @@
             color: #ffffff;
         }
 
-        li {
-            padding-left: 2em;
-            text-indent: -2em;
+        a {
+            color: #54b4cf;
         }
 
         @media only screen and (max-width: 550px), screen and (max-device-width: 550px) {
@@ -275,25 +274,23 @@
                                 <div class="escalations-text"
                                      style="font-family: Arial;font-size: 16px;font-weight: normal;font-style: normal;font-stretch: normal;line-height: 1.25;letter-spacing: normal;padding: 10px;color: #ffffff;">
                                     <ul style="color: #ffffff;padding:0 0 0 0">
-                                        <li style="padding-left: 2em;text-indent: -2em;color: #ffffff">This is the first takeaway</li>
+                                        <li>This is the first takeaway</li>
                                         <br>
-                                        <li style="padding-left: 2em;text-indent: -2em;">This is another takeaway</li>
+                                        <li>This is another takeaway</li>
                                         <br>
-                                        <li style="padding-left: 2em;text-indent: -2em;">Here's a third takeaway from
-                                            the week
-                                        </li>
+                                        <li>Here's a third takeaway from the week</li>
                                         <br>
                                     </ul>
                                 </div>
                             </tr>
                             <tr>
-                                    <hr style="border:1px solid #59767c" width="100%">
+                                <hr style="border:1px solid #59767c" width="100%">
 
                             </tr>
                             <tr class="escalations-copy"
                                 style="font-family: Arial;font-size: 25px;font-weight: 500;font-style: normal;font-stretch: normal;line-height: 1.72;letter-spacing: normal;color: #ffffff;">
                                 <p class="escalations-copy"
-                                style="font-family: Arial;font-size: 25px;font-weight: 500;font-style: normal;font-stretch: normal;line-height: 1.72;letter-spacing: normal;color: #ffffff;">
+                                   style="font-family: Arial;font-size: 25px;font-weight: 500;font-style: normal;font-stretch: normal;line-height: 1.72;letter-spacing: normal;color: #ffffff;">
                                     Blockers/Escalations
                                 </p>
                             </tr>
@@ -369,20 +366,16 @@
                                         <tr>
                                             <td class="project-burndown-copy"
                                                 style="font-family: FreightDispPro-Regular;font-size: 25px;font-weight: bold;font-style: normal;font-stretch: normal;line-height: 1.72;letter-spacing: normal;color: #4a4a4a;">
-                                                Icebox: (link to running list)
+                                                Icebox:
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="project-burndown-text"
                                                 style="font-family: Arial;font-size: 16px;font-weight: normal;font-style: normal;font-stretch: normal;line-height: 1.25;letter-spacing: normal;color: #4a4a4a;">
                                                 <br>
-                                                <li style="padding-left: 2em;text-indent: -2em;">No additions this past
-                                                    week
-                                                </li>
+                                                <li>No additions this past week</li>
                                                 <br>
-                                                <li style="padding-left: 2em;text-indent: -2em;"><a href="google.com">Link</a>
-                                                    to Icebox
-                                                </li>
+                                                <li><a href="google.com" style="color: #54b4cf;">Link</a> to Icebox</li>
                                             </td>
                                         </tr>
                                     </table>
@@ -428,13 +421,9 @@
                                             <td class="project-burndown-text"
                                                 style="font-family: Arial;font-size: 16px;font-weight: normal;font-style: normal;font-stretch: normal;line-height: 1.25;letter-spacing: normal;color: #4a4a4a;">
                                                 <br>
-                                                <li style="padding-left: 2em;text-indent: -2em;">No new security risks
-                                                    identified this past week
-                                                </li>
+                                                <li>No new security risks identified this past week</li>
                                                 <br>
-                                                <li style="padding-left: 2em;text-indent: -2em;"><a href="google.com">Link</a>
-                                                    to known Security Risks
-                                                </li>
+                                                <li><a href="google.com" style="color: #54b4cf;">Link</a> to known Security Risks</li>
                                             </td>
                                         </tr>
                                     </table>
@@ -480,9 +469,7 @@
                                             <td class="project-burndown-text"
                                                 style="font-family: Arial;font-size: 16px;font-weight: normal;font-style: normal;font-stretch: normal;line-height: 1.25;letter-spacing: normal;color: #4a4a4a;">
                                                 <br>
-                                                <li style="padding-left: 2em;text-indent: -2em;"><a href="google.com">Link</a>
-                                                    to Project Plan
-                                                </li>
+                                                <li><a href="google.com" style="color: #54b4cf;">Link</a> to Project Plan</li>
                                             </td>
                                         </tr>
                                     </table>
@@ -521,18 +508,16 @@
                                         <tr>
                                             <td class="project-burndown-copy"
                                                 style="font-family: FreightDispPro-Regular;font-size: 25px;font-weight: bold;font-style: normal;font-stretch: normal;line-height: 1.72;letter-spacing: normal;color: #4a4a4a;">
-                                                Upcoming
+                                                Upcoming Milestones
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="project-burndown-text"
                                                 style="font-family: Arial;font-size: 16px;font-weight: normal;font-style: normal;font-stretch: normal;line-height: 1.25;letter-spacing: normal;color: #4a4a4a;">
                                                 <br>
-                                                <li style="padding-left: 2em;text-indent: -2em;">Feb 8: Freeze on
-                                                    feature development
-                                                </li>
+                                                <li>Feb 8: Freeze on feature development</li>
                                                 <br>
-                                                <li style="padding-left: 2em;text-indent: -2em;">Mar 6: V1 release</li>
+                                                <li>Mar 6: V1 release</li>
                                             </td>
                                         </tr>
                                     </table>
