updated blockers section

--- a/executiveEmailTemplate.html
+++ b/executiveEmailTemplate.html
@@ -282,7 +282,7 @@
                 <tr class="takeaways" bgcolor="#124a55"
                     style="font-family: Arial;font-size: 16px;font-weight: normal;font-style: normal;font-stretch: normal;line-height: 1.44;letter-spacing: normal;color: #ffffff;">
                     <td class="innerpadding borderbottom"
-                        style="padding: 0px 30px 30px 30px;border-bottom: 1px solid #f2eeed;">
+                        style="padding: 15px 30px 30px 30px;border-bottom: 1px solid #f2eeed;">
                         <table width="100%" border="0" cellspacing="0" cellpadding="0">
                             <tr>
                                 <p class="escalations-copy"
@@ -315,9 +315,15 @@
                             </tr>
                             <tr>
                                 <div class="escalations-text"
-                                     style="font-family: Arial;font-size: 16px;font-weight: normal;font-style: normal;font-stretch: normal;line-height: 1.25;letter-spacing: normal;padding: 0;color: #ffffff;">
-                                    <span style="background-color: #35646e; padding: 5px 0px 5px">We are blocked on this thing and it will impact the timeline so please do X Y Z to
-                                        unblock the team</span>
+                                     style="font-family: Arial;font-size: 16px;font-weight: normal;font-style: normal;font-stretch: normal;line-height: 1.25;letter-spacing: normal;padding: 0px 15px;color: #ffffff;">
+                                    <ul style="color: #ffffff;padding:0 0 0 0">
+                                        <li>This a blocker, and what needs to happen</li>
+                                        <br>
+                                        <li>This could be another blocker</li>
+                                        <br>
+                                        <li>Here's a necessary step to solve this issue</li>
+                                        <br>
+                                    </ul>
                                 </div>
                             </tr>
                         </table>
